--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Another blog",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "test": "newman run ./tests/*.json",
+    "dev": "nodemon index.js > /dev/null | gulp watch",
     "start": "node app.js"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
+    "newman": "^4.5.0",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
