--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
     "newman": "^4.5.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pug": "^2.0.3"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -35,7 +36,6 @@
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.3",
     "slug": "^1.1.0"
   }
 }
